<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="@string/nav_daily_prayers"
        >
        <menu>
            <item
                android:id="@+id/nav_catena"
                android:title="@string/cat_title"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_quarter"
                android:title="@string/rqt_title"
                android:checkable="true"/>
        </menu>
    </item>
    <item android:title="@string/all_title_prsdium" >
        <menu>
        <item
            android:id="@+id/nav_meeting"
            android:title="@string/wmt_title"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_worksheet"
            android:title="@string/wks_title"
            android:checkable="true"/>
        </menu>
    </item>
    <group android:id="@+id/nav_manual_cat">
        <item android:id="@+id/nav_manual"
              android:title="@string/man_title"
              android:checkable="true"/>
    </group>

</menu>
