<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="legiomariae.org.br.legiomariae.tessera.CatenaFragment"
    tools:showIn="@layout/activity_navigation"
    android:id="@+id/fCatena">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clText">

        <TextView
            android:id="@+id/tvAntInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:lineSpacingExtra="2sp"
            android:padding="16dp"
            android:text="@string/cat_antiphon"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMagnificat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/cat_magnificat"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAntInicial" />

        <TextView
            android:id="@+id/tvAntFinal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:lineSpacingExtra="2sp"
            android:padding="16dp"
            android:text="@string/cat_antiphon"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMagnificat" />

        <TextView
            android:id="@+id/tvPreces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="start"
            android:lineSpacingExtra="2sp"
            android:padding="8dp"
            android:text="@string/cat_prayers"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAntFinal" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>